# advent-of-code

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: cli.cpp  download.cpp  download.h  solutions.cpp  solutions.h  storage.cpp  storage.h  trim.cpp  trim.h
src/solutions/: BigInt.cpp  BigInt.hpp  Graph.cpp  Graph.h  grid.cpp  grid.h  one_solution.h  string_split.cpp  string_split.h  string_split.hpp  template.txt
src/solutions/2015/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp
src/solutions/2022/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp
src/solutions/2023/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp
test/: bigint.cpp  graph.cpp  grid.cpp  smoke.cpp
